--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Dasmoto's Arts & Crafts</h1>
     <div>
-      <h2>Brushes</h2>
+      <h2 class="brushes">Brushes</h2>
       <img
         src="https://content.codecademy.com/courses/freelance-1/unit-2/hacksaw.jpeg"
         alt="Paint Brush"
@@ -20,7 +20,30 @@
         weight and ability to hold pain in large amounts. Available in different
         sizes.
       </p>
-      <p>Starting at $3.00 / brush.</p>
+      <p class="price">Starting at $3.00 / brush.</p>
+    </div>
+    <div>
+      <h2 class="frames">Frames</h2>
+      <img
+        src="https://content.codecademy.com/courses/freelance-1/unit-2/frames.jpeg"
+        alt="Paint Brush"
+      />
+      <h3>Art Frames (assorted)</h3>
+      <p>
+        Assorted frames made of different material, including MDF, birchwood,
+        and PDE.
+      </p>
+      <p class="price">Starting at $2.00 / frame.</p>
+    </div>
+    <div>
+      <h2 class="paint">Paint</h2>
+      <img
+        src="https://content.codecademy.com/courses/freelance-1/unit-2/finnish.jpeg"
+        alt="Paint Brush"
+      />
+      <h3>Clean Finnish Paint</h3>
+      <p>Imported paint from Finland. Over 250 colors available in-store.</p>
+      <p class="price">Starting at $5.00 / tube.</p>
     </div>
   </body>
 </html>
